fixes research spacing 12

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -256,6 +256,6 @@ p.research-date {
     padding-top: 20px;
 }
 
-a.carousel-control {
+/*a.carousel-control {
     top: 20px;
-}
+}*/
